# overmind

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  BACKLOG.md  CONTEXT.md  Directory.Packages.props  Dockerfile  Dockerfile.capture-tracer  MISSION.md  Makefile  NEXT_STEPS.md  PROJECT_DIRECTION.md  README.md  agent-keys.example.yaml  appsettings.json  compose.dev.yaml  compose.yaml  docker-compose.yml  memsrv.sln  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
.sandcastle/: main.mts
config/: never_store.yaml
docs/: agent-memory-handoff-v2.md  agent-memory-handoff-v4.md  capture-synthetic-slice.md  decisions.md  deferred-knowledge-and-dispatcher-notes.md  deployment-contract.md  design-rules.md  memory-server-phase1-spec.md  north-star-distillation.md  north-star.md  overmind-future-plan.md  session2-plan.md  testing.md  workflow.md
fixtures/: codex-synthetic.jsonl
migrations/: 0001_init.sql  0002_capture_slice.sql  0003_capture_stream_contract.sql  0004_capture_locator_timestamp.sql  0005_capture_relationship_stream_scope.sql  0006_capture_runtime_update_grants.sql  001_v0a_memory_loop.sql  002_trace_events_and_provenance.sql
reference/: csharp-sdk.manifest
scripts/: seed_repo_memories.py  smoke_test.py
tests/: test_cli_parser.py  test_service.py
tools/: afk-followups.sh  afk-merge.sh  benchmark-test.sh  provision-sdk-reference.sh  run-afk-issue.sh  run-afk-once.sh  run-test-suite.sh  smoke-compose.sh  smoke-release-image.sh  test-afk-merge.sh  test-afk-tracer.sh  test-afk-watcher.sh  test-db.sh
(+74 files in other folders)
